Adicionado o código do exercício camelcase

--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
         <p id="paragrafo">texto que vai ser alterado pela ação do botão</p>
         <button onclick = "acaoBotao()">INICIAR AÇÃO</button>
     </body>
-    <script src="estrutura-repita.js"></script>
+    <script src="camelcase.js"></script>
 </html>
